# data-preprocessing-

./: .gitignore  Dockerfile  Initialization_with_real_data.ipynb  README.md  SARIMA.ipynb  cleaning_2.ipynb  connection_functions.py  connections_functions.py  data_cleaning_functions.py  dataprocessing_functions.py  feature_engineering.ipynb  feature_engineering_functions.py  forecasting_models.pkl  generate_data.py  infoManager.py  information.py  initialize.py  machine_learning_functions.py  main.py  new_datapoint.json  on_request_pipeline.py  pipeline.ipynb  pipeline_idea_not_finished_at_all.ipynb  pipeline_prototype.ipynb  preprocessing_functions.py  pyproject.toml  requirements.txt  store.json  store.pkl  streaming_pipeline copy.py  streaming_pipeline.py  synthetic_data.json  trial.py
.github/workflows/: devsecops_container_scanning.yml
data/: new_datapoint.json  store.json  store.pkl  synthetic_data.json
docs/: index.html
explainability/: explainability.ipynb
exploration_documents/: Drift_detection.ipynb  data_cleaning_functions.py  feature_engineering.ipynb  feature_engineering_functions.py  generate_data.py  machine_learning_functions.py  pipeline_prototype.ipynb
initialization/: generate_data.py  initialize.py  model_ad_generator.ipynb  transform_dataset_prof.ipynb  transform_dataset_prof.py
notification/: mail_demo.py  mail_sender.py
src/app/: config.py  connection_functions.py  connections_functions.py  dataprocessing_functions.py  fix_data.py  initialize.py  main.py  on_request_pipeline.py  streaming_pipeline.py  (+1 more)
tests/: api_tests.py
(+207 files in other folders)
